Fixing logo not showing

--- a/app/scss/components/contact.scss
+++ b/app/scss/components/contact.scss
@@ -29,6 +29,7 @@
 }
 
 .logo {
+  display: block;
   width: u.rem(65);
 }
 
